stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_duplicate_external_decl.snap
---
source: tests/fixtures.rs
assertion_line: 1275
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/duplicate_external_decl.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × duplicate external declaration
   ╭─[tests/fixtures/diagnostics/types/duplicate_external_decl.ml:2:1]
 1 │ external clock : () -> i64 = "riot_clock"
 2 │ external clock : () -> i64 = "riot_clock_again"
   · ───────────────────────┬───────────────────────
   ·                        ╰── this external name is already declared in this module
 3 │ 
   ╰────
  help: choose a unique external name
